2012-05-01  Joseph Myers  <joseph@codesourcery.com>

	* conform/conformtest.pl: Use -ansi for XPG3, XPG4 and UNIX98.
	Use -std=c99 for XOPEN2K.
	(@knownproblems): Remove.
	(newtoken): Don't check %isknown.

	* conform/data/math.h-data [XPG3 || XPG4 || UNIX98] (fpclassify):
	Do not expect macro.
	[XPG3 || XPG4 || UNIX98] (isfinite): Likewise.
	[XPG3 || XPG4 || UNIX98] (isinf): Likewise.
	[XPG3 || XPG4 || UNIX98] (isnan): Likewise.
	[XPG3 || XPG4 || UNIX98] (isnormal): Likewise.
	[XPG3 || XPG4 || UNIX98] (signbit): Likewise.
	[XPG3 || XPG4 || UNIX98] (isgreater): Likewise.
	[XPG3 || XPG4 || UNIX98] (isgreaterequal): Likewise.
	[XPG3 || XPG4 || UNIX98] (isless): Likewise.
	[XPG3 || XPG4 || UNIX98] (islessequal): Likewise.
	[XPG3 || XPG4 || UNIX98] (islessgreater): Likewise.
	[XPG3 || XPG4 || UNIX98] (isunordered): Likewise.
	[XPG3 || XPG4 || UNIX98] (isnan): Expect as function.
	[XPG3 || XPG4 || UNIX98] (HUGE_VALF): Do not expect.
	[XPG3 || XPG4 || UNIX98] (HUGE_VALL): Likewise.
	[XPG3 || XPG4 || UNIX98] (INFINITY): Likewise.
	[XPG3 || XPG4 || UNIX98] (NAN): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_INFINITE): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_NAN): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_NORMAL): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_SUBNORMAL): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_ZERO): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_FAST_FMA): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_FAST_FMAF): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_FAST_FMAL): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_ILOGB0): Likewise.
	[XPG3 || XPG4 || UNIX98] (FP_ILOGBNAN): Likewise.
	[XPG3 || XPG4 || UNIX98] (copysign): Likewise.
	[XPG3 || XPG4 || UNIX98] (exp2): Likewise.
	[XPG3 || XPG4 || UNIX98] (log2): Likewise.
	[XPG3 || XPG4 || UNIX98] (tgama): Likewise.
	[XPG3] (acosh): Likewise.
	[XPG3] (asinh): Likewise.
	[XPG3] (atanh): Likewise.
	[XPG3] (cbrt): Likewise.
	[XPG3] (expm1): Likewise.
	[XPG3] (ilogb): Likewise.
	[XPG3] (log1p): Likewise.
	[XPG3] (logb): Likewise.